src/core/scss/_zadark-prv.scss
@mixin prv-lastest-message {
  .conv-item .conv-item-body__main .conv-message {
    position: relative;

    &::after {
      content: "••••••";
      position: absolute;
      top: 0;
      left: 0;

      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;

      color: var(--text-secondary);
      font-size: 16px;
      letter-spacing: 1px;
      line-height: normal;
      opacity: 1;

      transition: opacity 100ms ease-in-out;
    }

    * {
      opacity: 0;
      transition: opacity 100ms ease-in-out;
    }
  }

  .conv-item:hover .conv-item-body__main .conv-message {
    &::after {
      opacity: 0;
    }

    * {
      opacity: 1;
    }
  }
}

@mixin prv-thread-chat-message {
  .chat-message:not(.multi-select-mode) {
    .card:not(.card--oa):not(.card--sticker):not(.card--group-photo),
    .call-msg {
      > * {
        opacity: 0.1;
        transition: opacity 100ms ease-in-out;
      }
    }

    .img-msg-v2 {
      .img-msg-v2__th > * {
        opacity: 0;
        transition: opacity 100ms ease-in-out;
      }

      .img-msg-v2__ft > *:not(.img-msg-v2__rct):not(.img-msg-v2__st) {
        opacity: 0.1;
        transition: opacity 100ms ease-in-out;
      }
    }

    .card--sticker .card--group-sticker__row__item {
      opacity: 0.5;
      filter: var(--prv-sticker-filter);
      transition:
        opacity 100ms ease-in-out,
        filter 100ms ease-in-out;
    }

    .card--group-photo .card--group-photo__row__item .img-g-v2 {
      opacity: 0;
      transition: opacity 100ms ease-in-out;
    }
  }

  .td-msg-v3,
  .message-info_content,
  .event-message__content,
  .e2ee-event-info,
  .reminder-info-v2 {
    > * {
      opacity: 0.1;
      transition: opacity 100ms ease-in-out;
    }
  }

  // Pin message
  .chat-group-topic__item .info-container > .content-container {
    opacity: 0.1;
    transition: opacity 100ms ease-in-out;
  }

  #messageView:hover {
    .chat-message:not(.multi-select-mode) {
      .card:not(.card--oa):not(.card--sticker):not(.card--group-photo),
      .call-msg {
        > * {
          opacity: 1;
        }
      }

      .img-msg-v2 {
        .img-msg-v2__th,
        .img-msg-v2__ft {
          > * {
            opacity: 1;
          }
        }
      }

      .card--sticker .card--group-sticker__row__item {
        opacity: 1;
        filter: none;
      }

      .card--group-photo .card--group-photo__row__item .img-g-v2 {
        opacity: 1;
      }
    }

    .td-msg-v3,
    .message-info_content,
    .event-message__content,
    .e2ee-event-info,
    .reminder-info-v2 {
      > * {
        opacity: 1;
      }
    }

    // Pin message
    .chat-group-topic__item .info-container > .content-container {
      opacity: 1;
    }
  }

  .chat-input__content__input {
    #richInput,
    .rich-text-input {
      opacity: 0.1;
      transition: opacity 100ms ease-in-out;

      &:hover {
        opacity: 1;
      }
    }
  }
}

@mixin prv-conv-avatar {
  // Conv Avatar

  .conv-item,
  .chat-item:not(.me),
  .threadChat__avatar,
  .seen-msg-stt,
  div[keys="avt-list-conv-media_box"] {
    --zadark-avatar-color: var(--N30);
    --zadark-avatar-bg: var(--N10);

    .zavatar {
      &::after {
        position: absolute;
        top: 0;
        left: 0;
        content: "\e901";

        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 50rem;

        color: var(--zadark-avatar-color);
        background: var(--zadark-avatar-bg);
        font-family: "ZaDarkIcons";

        transition: opacity 100ms ease-in-out;
      }

      &.zavatar-multi::after {
        content: "\e900";
      }

      &.zavatar-xxs::after {
        font-size: 0.5rem;
      }
      &.zavatar-m::after {
        font-size: 1rem;
      }
      &.zavatar-l::after {
        font-size: 1.25rem;
      }
      &.zavatar-xl::after {
        font-size: 1.5rem;
      }

      .a-child {
        opacity: 0;
        transition: opacity 100ms ease-in-out;
      }
    }
  }

  .conv-item.selected {
    --zadark-avatar-color: var(--N40);
    --zadark-avatar-bg: var(--N20);
  }

  #conversationListId:hover,
  #header:hover,
  #messageView:hover,
  #chatInfoGeneral:hover,
  #recent-search-list:hover,
  #searchResultList:hover {
    .zavatar {
      &::after {
        opacity: 0;
      }

      .a-child {
        opacity: 1;
      }
    }
  }
}

@mixin prv-conv-name {
  // Conv Name
  #conversationListId,
  #recent-search-list,
  #searchResultList {
    .conv-item .conv-item-title__name {
      position: relative;

      &::after {
        position: absolute;
        content: "••••••";
        top: 0;

        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;

        font-size: 16px;
        letter-spacing: 1px;

        transition: opacity 100ms ease-in-out;
      }

      .truncate {
        opacity: 0;
        transition: opacity 100ms ease-in-out;
      }
    }
  }

  #conversationListId:hover,
  #recent-search-list:hover,
  #searchResultList:hover {
    .conv-item-title__name {
      &::after {
        opacity: 0;
      }

      .truncate {
        opacity: 1;
      }
    }
  }

  // Thread Chat Header
  .threadChat__title {
    position: relative;

    &::after {
      content: "••••••";
      position: absolute;
      top: 0;
      left: 0;

      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;

      color: var(--text-primary);
      font-size: 18px;
      letter-spacing: 1px;
      opacity: 1;

      transition: opacity 100ms ease-in-out;
    }

    * {
      opacity: 0;
      transition: opacity 100ms ease-in-out;
    }
  }

  #header:hover {
    .threadChat__title {
      &::after {
        opacity: 0;
      }

      * {
        opacity: 1;
      }
    }
  }

  // Conv Info
  .chat-info-general__section .header-info__name .truncate {
    position: relative;
    min-width: 64px;
    color: var(--bg-default);
    text-align: center;
    transition: color 100ms ease-in-out;

    &::after {
      position: absolute;
      top: 0;
      content: "••••••";

      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;

      color: var(--text-primary);
      background-color: var(--bg-default);
      font-size: 18px;
      letter-spacing: 1px;

      transition: opacity 100ms ease-in-out;
    }
  }

  #chatInfoGeneral:hover {
    .chat-info-general__section .header-info__name .truncate {
      color: var(--text-primary);

      &::after {
        opacity: 0;
      }
    }
  }

  // vi
  .rich-input.empty[placeholder*="tin nhắn"]::before {
    content: "Nhập @, tin nhắn tới ••••••";
  }

  // en
  .rich-input.empty[placeholder*="Message"]::before {
    content: "@, Message ••••••";
  }
}

